Fri Jul  7 15:44:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove MultiMatch::get_max_weight()

Thu Jul  6 19:01:32 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix concurrency problem ... in threadtest.  D'oh!

Thu Jul  6 18:01:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More portability fixes.

Thu Jul  6 16:46:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix deadlock when calling get_matching_terms()

Thu Jul  6 16:33:45 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fix to the Solaris portability fixes.

Thu Jul  6 15:39:36 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More Solaris portability fixes.

Thu Jul  6 13:49:20 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Correct concurrency problems in Muscat 3.6 databases.  Should now
	  be threadsafe (ie, multiple threads may safely access the same
	  database object - only one thread should access each derived
	  postlist object, however these are really iterators and this
	  can never happen when using the API, anyway.)

Thu Jul  6 13:18:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A few more OmQuery uses added to RunTest.java

	* NEAR and PHRASE queries now supported from Java.

Thu Jul  6 12:23:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The OmQuery constructors taking vector iterators now accept
	  FILTER, XOR, etc. as long as there are exactly two subqueries.
	
	* OmError exceptions are now also part of the debug logs.  (With
	  new tag OM_DEBUG_EXCEPTION)

	* includetest is now only compiled, not linked and run.

Thu Jul  6 10:55:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a problem stopping OmLineBuf from compiling.

	* Removed Test.java, which shouldn't have been there in the first
	  place.

Wed Jul  5 18:44:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More work towards compiling on Solaris with non-gcc.
